--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "husky": "^2.3.0",
     "jest": "^24.8.0",
     "lint-staged": "^8.1.7",
-    "micro": "^9.3.4",
     "prettier": "^1.17.1",
     "test-listen": "^1.1.0"
+  },
+  "peerDependencies": {
+    "micro": "^9.3.4"
   },
   "eslintConfig": {
     "parser": "babel-eslint",
