--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint 'src/**/*.js'"
   },
   "dependencies": {
+    "debug": "^4.1.1",
     "glob": "^7.1.4",
     "js-yaml": "^3.13.1",
     "ramda": "^0.26.1"
