--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   },
   "dependencies": {
     "debug": "^4.1.1",
-    "glob": "^7.1.4",
+    "glob": "^7.1.5",
     "js-yaml": "^3.13.1",
+    "map-values-deep": "^1.0.2",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
     "axios": "^0.19.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "husky": "^2.3.0",
-    "jest": "^24.8.0",
-    "lint-staged": "^8.1.7",
+    "babel-eslint": "^10.0.3",
+    "eslint": "^6.5.1",
+    "husky": "^3.0.9",
+    "jest": "^24.9.0",
+    "lint-staged": "^9.4.2",
     "micro": "^9.3.4",
-    "prettier": "^1.17.1",
+    "prettier": "^1.18.2",
     "test-listen": "^1.1.0"
   },
   "peerDependencies": {
@@ -46,13 +47,11 @@
     "singleQuote": true
   },
   "lint-staged": {
-    "linters": {
-      "src/**/*.js": [
-        "npm run prettier -- ",
-        "npm run lint -- ",
-        "git add"
-      ]
-    }
+    "src/**/*.js": [
+      "npm run prettier -- ",
+      "npm run lint -- ",
+      "git add"
+    ]
   },
   "jest": {
     "watchPathIgnorePatterns": [
