--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "lint": "eslint 'src/**/*.js'"
   },
   "dependencies": {
+    "ajv": "^6.10.2",
     "debug": "^4.1.1",
     "glob": "^7.1.5",
     "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
     "map-values-deep": "^1.0.2",
+    "qs": "^6.9.0",
     "ramda": "^0.26.1"
   },
   "devDependencies": {
